overflow x fixed chrome

--- a/HTML/footer.css
+++ b/HTML/footer.css
@@ -4,6 +4,7 @@ body {
     padding: 0;
     display: flex;
     flex-direction: column;
+    overflow-x: hidden;
   }
   html{
     height: 100%;
@@ -16,12 +17,14 @@ body {
    
     flex-grow: 1;
     margin-top: auto;
+   
   }
   html::-webkit-scrollbar{
     width: 0px;
     height: 0px;
     background-color: transparent;
   }
+  
   
   footer {
       background-color: #333;
